# availability-calendar

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  bump_version.py  compose.yaml  main.py  pyproject.toml
.github/workflows/: docker-image.yml  pre-commit.yml  release-please.yml  release.yml
src/: config.py  frontend.py  get_calendar.py  log_config.yaml  main.py
src/templates/: calendar.html
