[project]
name = "availability-calendar"
version = "1.1.11"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "cachetools-async>=0.0.5",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "recurring-ical-events>=3.8.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "gitpython>=3.1.45",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "ruff>=0.13.3",
    "semver>=3.0.4",
    "types-cachetools>=6.1.0.20250717",
    "types-icalendar>=6.3.1.20250822",
    "types-pyyaml>=6.0.12.20250822",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
templates = ["*.html"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "D",      # pydocstyle
    "CPY",    # flake8-copyright
]

[tool.mypy]
strict = true
local_partial_types = true
allow_redefinition_new = true
