[project]
name = "availability-calendar"
version = "1.1.14"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
  "cachetools-async>=0.0.5",
  "fastapi>=0.128.0",
  "httpx>=0.28.1",
  "jinja2>=3.1.6",
  "pytz>=2025.2",
  "pyyaml>=6.0.3",
  "recurring-ical-events>=3.8.0",
  "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
  "gitpython>=3.1.46",
  "mypy>=1.19.1",
  "prek>=0.3.1",
  "ruff>=0.14.10",
  "semver>=3.0.4",
  "types-cachetools>=6.2.0.20251022",
  "types-icalendar>=6.3.2.20251222",
  "types-pyyaml>=6.0.12.20250915",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
templates = ["*.html"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
  "D",   # pydocstyle
  "CPY", # flake8-copyright
]

[tool.mypy]
strict = true
local_partial_types = true
allow_redefinition_new = true
